# uproda

./: Cargo.toml  GEMINI.md
docs/: architecture.md  implementation_plan.md  requirements.md
src/: main.rs  uploader.rs
